--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family:
     'Pretendard Variable',
