--- a/src/components/MeetWrite/People.css
+++ b/src/components/MeetWrite/People.css
@@ -1,8 +1,9 @@
-/* customStyles.css */
+body {
+  box-sizing: border-box;
+}
 .react-select__control {
-  background-color: #fa5938 !important;
-  width: 100px !important;
-  height: 40px !important;
+  width: 80px !important;
+  height: 25px !important;
   border: none !important;
   border-radius: 20px !important;
   display: flex !important;
@@ -10,10 +11,33 @@
   cursor: pointer !important;
 }
 
+.react-select__control input {
+  caret-color: transparent !important; /* 텍스트 입력 커서를 투명하게 */
+}
+
+.react-select__control--is-focused {
+  outline: none !important;
+  box-shadow: none !important;
+  border-color: black !important;
+  cursor: pointer !important;
+}
+
 .react-select__single-value {
-  color: #ffffff !important;
-  font-size: 16px !important;
+  font-size: 14px !important;
   font-weight: 700 !important;
+}
+
+.react-select__input-container {
+  height: 20px !important;
+  width: 30px !important;
+}
+
+.react-select__value-container {
+  padding: 0 !important;
+  width: auto !important; /* 컨테이너 너비 자동 설정 */
+  min-width: 0 !important; /* 최소 너비 제거 */
+  height: 30px !important; /* 컨테이너 높이 설정 */
+  align-items: center !important; /* 텍스트 가운데 정렬 */
 }
 
 .react-select__menu {
@@ -30,16 +54,19 @@
 }
 
 .react-select__option--is-selected {
-  background-color: #fa5938 !important;
+  background-color: #ff4a4d !important;
   color: white !important;
-}
-
-.react-select__option--is-focused {
-  border: 1px solid #afaeb7 !important;
-  color: black !important;
 }
 
 .react-select__placeholder {
   color: white !important;
   font-weight: 600 !important;
+}
+
+.react-select__indicator {
+  padding: 4px !important;
+}
+
+.react-select__indicator-separator {
+  display: none;
 }
