feat: 달력, 인원수 설정 & 화면 세팅

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,25 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue',
     'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol', sans-serif;
+  height: 100%; /* 화면 전체 높이 */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
+}
+
+.center-content {
+  width: 100%;
+  max-width: 430px;
+  max-height: 932px;
+  height: 100vh;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
