design: 최대 인원수 변경 & 모음 글쓰기 크기 조정

--- a/src/components/MeetWrite/People.css
+++ b/src/components/MeetWrite/People.css
@@ -1,8 +1,12 @@
 body {
   box-sizing: border-box;
 }
+
+.react-select {
+  width: 30%;
+}
 .react-select__control {
-  width: 80px !important;
+  width: 100% !important;
   height: 25px !important;
   border: none !important;
   border-radius: 20px !important;
