style: 모임 시간 출력형식 수정 & 인원수 선택 스크롤바 제거

--- a/src/components/MeetWrite/People.css
+++ b/src/components/MeetWrite/People.css
@@ -52,6 +52,14 @@ body {
   text-align: center !important;
 }
 
+.react-select__menu-list {
+  scrollbar-width: none;
+}
+
+.react-select__menu-list::-webkit-scrollbar {
+  display: none;
+}
+
 .react-select__option {
   background-color: transparent !important;
   color: black !important;
