--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,11 @@ body {
   font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue',
     'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol', sans-serif;
-  height: 100%; /* 화면 전체 높이 */
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   margin: 0;
   padding: 0;
+  padding-bottom: env(safe-area-inset-bottom);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,7 +32,9 @@ body {
   width: 100%;
   max-width: 430px;
   max-height: 932px;
-  height: 100vh;
+  /* height: 100vh; */
+  height: calc(var(--vh, 1vh) * 100);
+  padding-bottom: env(safe-area-inset-bottom);
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
