design: 전체 화면 overscroll 방지

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: lightgray;
+  overscroll-behavior: none; /*pull-to-refresh 제스쳐 방지*/
 }
 
 #root {
