--- a/src/components/Mypage/MyCalendar.css
+++ b/src/components/Mypage/MyCalendar.css
@@ -1,3 +1,8 @@
+.custom-calendar {
+  width: 100%;
+  max-width: 370px;
+}
+
 .react-calendar__month-view__weekdays__weekday {
   text-decoration: none;
   letter-spacing: normal;
